判断用户身份出错

--- a/app/src/main/res/layout/info_same_2.xml
+++ b/app/src/main/res/layout/info_same_2.xml
@@ -20,6 +20,7 @@
             android:id="@+id/email_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@android:color/transparent"/>
     </LinearLayout>
     <LinearLayout
@@ -37,7 +38,7 @@
             android:id="@+id/contact_phone_number"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
             android:background="@android:color/transparent"
             android:textSize="15sp"/>
     </LinearLayout>
