--- a/app/src/main/res/layout/open_appointment.xml
+++ b/app/src/main/res/layout/open_appointment.xml
@@ -22,8 +22,8 @@
         <ImageView
             android:id="@+id/open_appointment"
             android:layout_width="80dp"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/close"/>
+            android:src="@mipmap/open"/>
     </RelativeLayout>
 </LinearLayout>
