--- a/app/src/main/res/layout/subject_teacher_right.xml
+++ b/app/src/main/res/layout/subject_teacher_right.xml
@@ -12,6 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/primary_school"
+            android:checked="true"
             android:layout_alignBottom="@id/primary_school"/>
         <TextView
             android:id="@+id/primary_school"
@@ -35,7 +36,8 @@
             android:layout_alignTop="@id/primary_school"
             android:layout_alignBottom="@id/primary_school"
             android:layout_toRightOf="@id/class_hour_cost"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:gravity="center"/>
         <TextView
             android:id="@+id/unit"
             android:layout_width="wrap_content"
@@ -48,6 +50,7 @@
             android:id="@+id/middle_subject"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:layout_alignTop="@id/middle_school"
             android:layout_alignBottom="@id/middle_school"/>
         <TextView
@@ -72,7 +75,8 @@
             android:background="@drawable/edit"
             android:layout_alignLeft="@id/cost1"
             android:layout_alignTop="@id/middle_school"
-            android:layout_alignBottom="@id/middle_school"/>
+            android:layout_alignBottom="@id/middle_school"
+            android:gravity="center"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -107,7 +111,8 @@
             android:background="@drawable/edit"
             android:layout_alignLeft="@id/cost1"
             android:layout_alignTop="@id/high_school"
-            android:layout_alignBottom="@id/high_school"/>
+            android:layout_alignBottom="@id/high_school"
+            android:gravity="center"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
