--- a/app/src/main/res/layout/teache_time.xml
+++ b/app/src/main/res/layout/teache_time.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     android:orientation="vertical">
 
     <!--星期行-->
@@ -85,7 +86,8 @@
         android:layout_alignTop="@id/morning"
         android:layout_alignLeft="@id/wednesday"
         android:layout_alignRight="@id/wednesday"
-        android:layout_alignBottom="@id/morning"/>
+        android:layout_alignBottom="@id/morning"
+        android:checked="true"/>
     <CheckBox
         android:id="@+id/thursday_morning"
         android:layout_width="wrap_content"
@@ -101,7 +103,8 @@
         android:layout_alignTop="@id/morning"
         android:layout_alignLeft="@id/friday"
         android:layout_alignRight="@id/friday"
-        android:layout_alignBottom="@id/morning"/>
+        android:layout_alignBottom="@id/morning"
+        android:checked="true"/>
     <CheckBox
         android:id="@+id/saturday_morning"
         android:layout_width="wrap_content"
@@ -134,7 +137,8 @@
         android:layout_alignTop="@id/afternoon"
         android:layout_alignLeft="@id/monday"
         android:layout_alignRight="@id/monday"
-        android:layout_alignBottom="@id/afternoon"/>
+        android:layout_alignBottom="@id/afternoon"
+        android:checked="true"/>
     <CheckBox
         android:id="@+id/tuesday_afternoon"
         android:layout_width="wrap_content"
@@ -150,7 +154,8 @@
         android:layout_alignTop="@id/afternoon"
         android:layout_alignLeft="@id/wednesday"
         android:layout_alignRight="@id/wednesday"
-        android:layout_alignBottom="@id/afternoon"/>
+        android:layout_alignBottom="@id/afternoon"
+        android:checked="true"/>
     <CheckBox
         android:id="@+id/thursday_afternoon"
         android:layout_width="wrap_content"
@@ -174,7 +179,8 @@
         android:layout_alignTop="@id/afternoon"
         android:layout_alignLeft="@id/saturday"
         android:layout_alignRight="@id/saturday"
-        android:layout_alignBottom="@id/afternoon"/>
+        android:layout_alignBottom="@id/afternoon"
+        android:checked="true"/>
     <CheckBox
         android:id="@+id/sunday_afternoon"
         android:layout_width="wrap_content"
@@ -207,7 +213,8 @@
         android:layout_alignTop="@id/evening"
         android:layout_alignLeft="@id/tuesday"
         android:layout_alignRight="@id/tuesday"
-        android:layout_alignBottom="@id/evening"/>
+        android:layout_alignBottom="@id/evening"
+        android:checked="true"/>
     <CheckBox
         android:id="@+id/wednesday_evening"
         android:layout_width="wrap_content"
@@ -247,5 +254,6 @@
         android:layout_alignTop="@id/evening"
         android:layout_alignLeft="@id/sunday"
         android:layout_alignRight="@id/sunday"
-        android:layout_alignBottom="@id/evening"/>
+        android:layout_alignBottom="@id/evening"
+        android:checked="true"/>
     </RelativeLayout>
