已更到最新

--- a/app/src/main/res/layout/area.xml
+++ b/app/src/main/res/layout/area.xml
@@ -5,7 +5,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
@@ -16,7 +15,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:background="#E5E5E5"/>
         <RelativeLayout
             android:layout_width="match_parent"
