--- a/app/src/main/res/layout/teach_experience.xml
+++ b/app/src/main/res/layout/teach_experience.xml
@@ -12,7 +12,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="#E5E5E5"/>
     <TextView
         android:id="@+id/teach_experience"
