--- a/app/src/main/res/layout/select_subject.xml
+++ b/app/src/main/res/layout/select_subject.xml
@@ -10,6 +10,7 @@
         android:gravity="center"
         android:textSize="25sp"/>
     <ImageView
+        android:id="@+id/subject_select"
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_toRightOf="@id/subject"
